Created dynamic inner join API feature
