# flask_api/entity.py
@@ -1,7 +1,7 @@
 from flask import Response
 
-from config import db, ma
-from responses import (
+from flask_api.config import db, ma
+from flask_api.responses import (
     entity_post_response, entity_get_response,
     record_id_get_response, record_id_put_response,
     record_id_patch_response, record_id_delete_response,
@@ -46,5 +46,5 @@ class Entity(View):
     def delete(self, primary_key: int) -> Response:
         return record_id_delete_response(primary_key, self.entity)
 
-    def inner_join(self, *args) -> Response:
+    def inner_join(self, args: str) -> Response:
         return entity_inner_join_response(self.entity, *args)
